--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.sqa</groupId>
-    <artifactId>sqa</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>tech.aluvesoftware</groupId>
+    <artifactId>aluvesoftware</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>web</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -21,19 +25,4 @@
             <url>https://maven.pkg.github.com/Aluve-Software/Software_Quality_Assurance</url>
         </repository>
     </distributionManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>LATEST</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>LATEST</version>
-        </dependency>
-    </dependencies>
-
-
 </project>
