--- a/pom.xml
+++ b/pom.xml
@@ -9,23 +9,49 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <junit-jupiter.version>5.9.2</junit-jupiter.version>
+        <junit-platform-suite.version>1.9.2</junit-platform-suite.version>
+        <cucumber.version>7.11.1</cucumber.version>
+
+        <java.version>11</java.version>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Aluve-Software</name>
+            <url>https://maven.pkg.github.com/Aluve-Software/Software_Quality_Assurance</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>3.3.0</version>
+            <groupId>tech.aluvesoftware</groupId>
+            <artifactId>api_support</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
-            <scope>provided</scope>
+            <groupId>tech.aluvesoftware</groupId>
+            <artifactId>web_cox</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <!-- Cucumber dependencies -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
